[project]
name = "pyvvm"
version = "0.2.0"
description = "VVM (Vector Vorticity Model) dataset loader"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.8.2",
    "distributed>=2026.1.1",
    "ipython>=9.9.0",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "scipy>=1.17.0",
    "xgcm>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyvvm"]
